--- a/sesion2/report/caps/4.tex
+++ b/sesion2/report/caps/4.tex
@@ -4,3 +4,23 @@
 \fancyfoot[r]{\fecha}
 
 \section{Conclusiones} \label{sec:5}
+El desarrollo de esta práctica ha permitido analizar en profundidad las diferencias de rendimiento en el cálculo del producto de matrices 
+utilizando los lenguajes \python\ y \C, combinando ambos mediante una estrategia de hibridación. Se han cumplido las expectativas iniciales, 
+evidenciando que \python\ presenta un rendimiento significativamente inferior al de \C\ en este contexto específico. 
+
+Debe destacarse que esta afirmación no implica que \python\ sea inherentemente ineficiente o un lenguaje ``peor'' que \C. Simplemente, 
+su propósito principal no reside en la eficiencia computacional, sino en facilitar la legibilidad, la rapidez de desarrollo y la accesibilidad 
+para el programador. Por el contrario, \C\ está diseñado para ofrecer un control más preciso sobre la gestión de memoria y el rendimiento, 
+lo que lo hace ideal para tareas computacionalmente intensivas como lo es la multiplicación de matrices.
+
+De hecho, más allá de los análisis realizados, el objetivo principal de esta práctica es hacer notar el valor que aporta la combinación 
+de ambos lenguajes en un entorno híbrido. \python\ permite un desarrollo mucho más rápido y sencillo, por lo que es ideal para realizar 
+la toma de tiempos (e incluso análisis de los datos obtenidos), mientras que \C, siendo un lenguaje más complejo, es ideal 
+para realizar el producto de matrices. \\
+Este es el mayor aprendizaje extraído de esta práctica: siempre que sea posible, resulta muy conveniente combinar diferentes lenguajes de 
+programación para aprovechar las ventajas de cada uno de ellos, obteniendo así soluciones tanto eficientes como sostenibles en términos 
+de desarrollo.
+
+Respecto a dificualtades o problemas encontrados durante la práctica, no se han presentado problemas significativos. La principal 
+dificultad ha sido la implementación de los algoritmos de \rowmajor, \colmajor\ y \zorder\ para el producto matricial, pero esto ya 
+se había resuleto en la sesión anterior. 
