--- a/sesion1/report/caps/intro.tex
+++ b/sesion1/report/caps/intro.tex
@@ -18,8 +18,8 @@ eficiencia en el uso de memoria.
 \subsection{Desarrollo}
 Para el desarrollo de esta práctica, se han seguido las indicaciones recogidas en el guion de la sesión correspondiente. 
 Se han implementado las tres estrategias de acceso en el código fuente, y se han llevado a cabo diversas pruebas para medir su rendimiento.
-Con el fin de comparar los tiempos de ejecución, se ha desarrollado un programa en lenguaje \textit{C} con fines de \textit{benchmarking}, 
-tal y como se detalla en el capítulo siguiente. Todo el código fuente se encuentra disponible públicamente en el siguiente 
+Con el fin de comparar los tiempos de ejecución, se ha desarrollado un programa en \textit{C} con fines de \textit{benchmarking}, 
+tal y como se detalla en el capítulo siguiente. Todo el código fuente se encuentra disponible de forma pública en el siguiente 
 \href{https://github.com/rubennmg/CAP/tree/main/sesion1}{repositorio de GitHub}, así como en el archivo \textit{zip} asociado a esta entrega.
 
 \subsection{\textit{Benchmarking}}
